--- a/tmux.conf
+++ b/tmux.conf
@@ -44,5 +44,7 @@ set -g @plugin 'alexwforsythe/tmux-which-key'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+run-shell ~/.config/tmux/plugins/tmux-which-key/plugin.sh.tmux
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
