--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,10 @@
+unbind C-b
+set-option -g prefix C-space
+bind-key C-space send-prefix
+
+set -g default-shell /usr/bin/fish
+
 set -g default-terminal "screen-256color"
-# tell Tmux that outside terminal supports true color
 set -ga terminal-overrides ",xterm-256color*:Tc"
 #### COLOUR (Solarized dark)
 
