Set the base index to 1

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,14 @@ bind-key C-space send-prefix
 
 set -g default-shell /usr/bin/fish
 
+set -g base-index 1
+setw -g pane-base-index 1
+
+#### CUSTOM CONFIG END
+
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
@@ -36,6 +42,7 @@ set-window-option -g clock-mode-colour green #green
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
+### TMP
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
