--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ bind-key C-space send-prefix
 set -g default-shell /usr/bin/fish
 
 set -g base-index 1
-setw -g pane-base-index 1
+set-window-option -g pane-base-index 1
 
 #### CUSTOM CONFIG END
 
